--- a/user-page.html
+++ b/user-page.html
@@ -1,4 +1,6 @@
-<h3>{{user.currentEmailFilter}}'s Tickets:</h3>
+<h3>{{user.userEmail}}'s Tickets:</h3>
 <ul class="list-group">
-  <li class="list-group-item" ng-repeat="ticket in user.tickets | filter:user.currentEmailFilter"><b>{{ticket.title}}</b><br><pre>{{ticket.content}}</pre></li>
+  <li class="list-group-item" ng-repeat="ticket in user.tickets"><b>{{ticket.title}}</b><br><pre>{{ticket.content}}</pre></li>
 </ul>
+<br>
+<a ui-sref='tickets-list'><b>go back</b></a>
