--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
     <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
     <script src="app.js"></script>
+    <script src="app.cnfg.js"></script>
+    <script src="main.srvc.js"></script>
+    <script src="main.ctrl.js"></script>
+    <script src="ticket.ctrl.js"></script>
+    <script src="user.ctrl.js"></script>
 </head>
 <body ng-app="app">
   <div class="container">
