form validation, ctrls, srvcs, resolves

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src="app.cnfg.js"></script>
     <script src="main.srvc.js"></script>
     <script src="main.ctrl.js"></script>
-    <script src="ticket.ctrl.js"></script>
+    <script src="form.ctrl.js"></script>
     <script src="user.ctrl.js"></script>
+    <script src="ticket.ctrl.js"></script>
 </head>
 <body ng-app="app">
   <div class="container">
