added local storage usage

--- a/ticket.html
+++ b/ticket.html
@@ -1,4 +1,4 @@
-<h3>Ticket #{{ticketCtrl.ticket.id}}</h3>
+<h3>Ticket ID: #{{ticketCtrl.ticket.id}}, User Email: {{ticketCtrl.ticket.userEmail}}</h3>
 <b>{{ticketCtrl.ticket.title}}</b><br><pre>{{ticketCtrl.ticket.content}}</pre>
 <br>
 <a ui-sref='tickets-list'><b>go back</b></a>
