--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <script src="app.cnfg.js"></script>
+    <script src="storage.srvc.js"></script>
     <script src="main.srvc.js"></script>
     <script src="main.ctrl.js"></script>
     <script src="form.ctrl.js"></script>
