--- a/new-ticket-form.html
+++ b/new-ticket-form.html
@@ -9,7 +9,7 @@
       </div>
       <div class="form-group">
           <label>Email address</label>
-          <input type="email" name="userEmail" class="form-control" ng-model="form.newTicket.userEmail" ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" required/>
+          <input type="email" name="userEmail" class="form-control" ng-model="form.newTicket.userEmail" ng-patfghgfhgfhtern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" required/>
           <p ng-show="ticketForm.userEmail.$invalid" class="help-block">Enter a valid email address.</p>
       </div>
       <div class="form-group">
@@ -18,7 +18,7 @@
       </div>
       <div class="row">
           <div class="col-xs-6">
-              <button class="btn btn-success pull-right" ng-disabled="ticketForm.$invalid"><span class="glyphicon glyphicon-plus-sign"></span>Add</button>
+              <button class="btn btn-success pull-right" ng-disabled="ticketForm.$invalid"><span class="glyphicon glyphicon-plus-sign"></span>   Add</button>
           </div>
       </div>
 </form>
