--- a/user-page.html
+++ b/user-page.html
@@ -3,4 +3,5 @@
   <li class="list-group-item" ng-repeat="ticket in user.tickets"><b>{{ticket.title}}</b><br><pre>{{ticket.content}}</pre></li>
 </ul>
 <br>
-<a ui-sref='tickets-list'><b>go back</b></a>
+<a ui-sref='tickets-list'><b>Go Back</b></a>
+<br><br>
