--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Ticketing System</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.4/angular.min.js"></script>
     <script src="http://angular-ui.github.io/ui-router/release/angular-ui-router.js"></script>
     <script src="app.js"></script>
@@ -15,10 +16,42 @@
     <script src="user.ctrl.js"></script>
     <script src="ticket.ctrl.js"></script>
 </head>
+
+<header class="top" role="header">
+    <div class="container">
+        <a href="#" class="navbar-brand pull-left">
+            MINI PROJECT
+        </a>
+        <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="glyphicon glyphicon-align-justify"></span>
+        </button>
+        <nav class="navbar-collapse collapse" role="navigation">
+            <ul class="navbar-nav nav">
+                <li><a href="#">Tickets List</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 <body ng-app="app">
-  <div class="container">
-    <h1>Ticketing System</h1>
-    <div ui-view></div>
+  <div class="middle">
+      <div class="container">
+          <div class="col-md-9 content">
+              <h2>Ticketing System</h2>
+              <br>
+              <div ui-view></div>
+              <br><br>
+          </div>
+      </div>
   </div>
 </body>
+
+<div class="bottom">
+    <div class="container">
+        <div class="col-md-4">
+            <h3><span class="glyphicon glyphicon-star"></span>Mini Project</h3>
+            <p>Ticketing System</p>
+        </div>
+    </div>
+</div>
 </html>
